Fixed: Gave up-button a z-index, now footer won't be over when scrolling down

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,6 +187,7 @@ footer {
     left: 5%;
     bottom: 0%;
     color: rgba(176, 221, 140, 0.74);
+    z-index: 1;
 }
 
 #icon {
